<resources>
    <string name="app_name">Obre</string>
    <string name="email_validation">Masukkan email yang valid!</string>
    <string name="password_length">Password tidak boleh kurang dari 8 karakter!</string>
    <string name="isi_email">Email harus diisi</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="isi_password">Password harus diisi</string>
    <string name="password_kurang">Password harus terdiri dari minimal 8 karakter</string>
    <string name="login_gagal">Login gagal. Mohon periksa kembali email dan password</string>
    <string name="traditional_service">Jasa Tradisional</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="pesan">Pesan</string>
    <string name="layananKeRumah">Layanan Dirumah</string>
    <string name="inputAlamat">Masukkan Detail Alamat</string>
    <string name="ringkasan">Ringkasan</string>
    <string name="metodePembayaran">Metode Pembayaran</string>
    <string name="tunai">Tunai</string>
    <string name="rumah">Dirumah</string>
    <string name="jumlahPesanan">Jumlah Pesanan</string>
    <string name="diProses">Diproses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">Profile Image</string>
    <string name="title_activity_maps">Maps</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="edit_profile">Ubah Data</string>
    <string name="lihat_rating"><u>Lihat Rating</u></string>
    <string name="reset"><u>Reset</u></string>
    <string name="daftar"><u>Daftar</u></string>
    <string name="masuk"><u>Masuk</u></string>
    <string name="tambah">Tambahkan</string>
</resources>